Minor fixes at Test